# gengame-sdk

./: LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/gengame_sdk/: __init__.py  evaluator.py  game.py  nn_evaluator.py  plugin.py
src/gengame_sdk/nn/: __init__.py  activations.py  network.py  training.py
src/gengame_sdk/server/: __init__.py  app.py  play.py  routes.py  schemas.py  service.py  tasks.py
tests/: test_evaluator.py  test_game.py  test_neural_network.py  test_plugin.py  test_supervised.py
